--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CPP_Primer_Answers)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CPP_Primer_Answers main.cpp ch10/10.1.h header.h ch10/10.2.h ch10/10.3.h ch10/10.4.h ch10/10.5.h ch10/10.6.h ch10/10.7.h ch10/10.9.h ch10/10.11.h ch10/10.12.h ch10/Sales_Data.h ch10/10.13.h ch10/10.14.h)
+add_executable(CPP_Primer_Answers main.cpp ch10/10.1.h header.h ch10/10.2.h ch10/10.3.h ch10/10.4.h ch10/10.5.h ch10/10.6.h ch10/10.7.h ch10/10.9.h ch10/10.11.h ch10/10.12.h ch10/Sales_Data.h ch10/10.13.h ch10/10.14.h ch10/10.15.h)
